fix content overflow moreover add lang class to language for front-end in the home

--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -120,6 +120,7 @@
         max-height: 20rem;
         overflow: hidden;
         object-fit: cover;
+        margin: 0;
         img {
           width: 100%;
           height: 100%;
@@ -184,7 +185,7 @@
       }
       &:hover {
         .content {
-          bottom: 0.35rem;
+          bottom: 0;
         }
       }
     }
